<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LunchList</string>
    <string name="empty">No restaurants!</string>

    <!-- details_form.xml -->
    <string name="name_">Name:</string>
    <string name="address_">Address:</string>
    <string name="notes_">Notes:</string>
    <string name="savebutton">Save</string>
    <string name="type_">Type:</string>
    <string name="loc_">Location:</string>
    <string name="noloc">(not set)</string>
    <string name="notehint">Notes</string>
    <string name="feedhint">Feed URL</string>
    <string name="takeout">Take-Out</string>
    <string name="sitdown">Sit-Down</string>
    <string name="delivery">Delivery</string>

    <!-- DetailsForm.java -->
    <string name="sit_down">sit_down</string>
    <string name="take_out">take_out</string>
    <string name="_delivery">delivery</string>

    <!-- LunchList.java -->
    <string name="id_extra">apt.tutorial._ID</string>
    <string name="sortorder">sort_order</string>
    <!-- uses some from DetailsForm and RestaurantHelper -->
    
    <!-- details_option.xml -->
    <string name="rssfeed">RSS Feed</string>
    <string name="saveloc">Save Location</string>
    <string name="showmap">Show on Map</string>
    
    <!-- FeedActivity.java -->
    <string name="feedurl">apt.tutorial.FEED_URL</string>
    <string name="except">Exception!</string>

    <!-- main.xml -->
    <string name="emptylistmsg">Click the MENU button to add a restaurant!</string>

    <!-- option.xml -->
    <string name="add">Add</string>
    <string name="settings">Settings</string>

    <!-- preferences.xml -->
    <string name="sorttitle">Sort Order</string>
    <string name="sortdialogtitle">Choose a sort order</string>
    <string name="sortsummary">Choose the order the list uses</string>

    <!-- RestaurantHelper.java -->
    <string name="dbname">lunchlist.db</string>
    <string name="createtable">CREATE TABLE restaurants (_id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT, address TEXT, type TEXT, notes TEXT, feed TEXT, lat REAL, lon REAL);</string>
    <string name="getall">SELECT _id, name, address, type, notes, lat, lon FROM restaurants ORDER BY </string>
    <string name="getbyid">SELECT _id, name, address, type, notes, feed, lat, lon FROM restaurants WHERE _id=?</string>
    <string name="dbupdate2">ALTER TABLE restaurants ADD COLUMN feed TEXT</string>
    <string name="dbupdate3_1">ALTER TABLE restaurants ADD COLUMN lat REAL</string>
    <string name="dbupdate3_2">ALTER TABLE restaurants ADD COLUMN lon REAL</string>
    <string name="namecol">name</string>
    <string name="addrcol">address</string>
    <string name="typecol">type</string>
    <string name="notecol">notes</string>
    <string name="feedcol">feed</string>
    <string name="latcol">lat</string>
    <string name="loncol">lon</string>
    <string name="db">restaurants</string>
    <string name="condition">_ID=?</string>

</resources>