<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dip"
        android:shrinkColumns="1"
        android:stretchColumns="1" >

        <TableRow>

            <TextView android:text="@string/name_" />

            <EditText android:id="@+id/name" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/address_" />

            <EditText android:id="@+id/addr" />
        </TableRow>

        <TableRow>

            <TextView android:text="Phone:" />

            <EditText
                android:id="@+id/phone"
                android:inputType="phone" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/type_" />

            <RadioGroup android:id="@+id/types" >

                <RadioButton
                    android:id="@+id/take_out"
                    android:checked="true"
                    android:text="@string/takeout" />

                <RadioButton
                    android:id="@+id/sit_down"
                    android:text="@string/sitdown" />

                <RadioButton
                    android:id="@+id/delivery"
                    android:text="@string/delivery" />
            </RadioGroup>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/loc_" />

            <TextView
                android:id="@+id/location"
                android:text="@string/noloc" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/notes_" />

            <EditText
                android:id="@+id/notes"
                android:gravity="top"
                android:lines="2"
                android:maxLines="2"
                android:maxWidth="200sp"
                android:scrollHorizontally="false"
                android:singleLine="false" />
        </TableRow>

        <EditText
            android:id="@+id/feed"
            android:hint="@string/feedhint" />
    </TableLayout>

</ScrollView>