<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:dialogTitle="@string/sortdialogtitle"
        android:entries="@array/sort_names"
        android:entryValues="@array/sort_clauses"
        android:key="sort_order"
        android:summary="@string/sortsummary"
        android:title="@string/sorttitle" />

    <CheckBoxPreference
        android:key="alarm"
        android:summary="Check if you want to know when it is time for lunch"
        android:title="Sound a Lunch Alarm" />

    <apt.tutorial.TimePreference
        android:defaultValue="12:00"
        android:dependency="alarm"
        android:key="alarm_time"
        android:summary="Set your desired time for the lunch alarm"
        android:title="Lunch Alarm Time" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="alarm"
        android:key="use_notification"
        android:summary="Check if you want a status bar icon at lunchtime, or uncheck for a full_screen notice"
        android:title="Use a Notification" />

    <RingtonePreference
        android:dependency="alarm"
        android:key="alarm_ringtone"
        android:showSilent="true"
        android:summary="Indicate the ringtone to play when it is lunchtime"
        android:title="Alarm Ringtone" />

</PreferenceScreen>